apps/tinyauth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyauth
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyauth
  template:
    metadata:
      labels:
        app: tinyauth
    spec:
      nodeSelector:
        kubernetes.io/hostname: "realtong-server"
      containers:
        - name: tinyauth
          image: ghcr.io/steveiliop56/tinyauth:v5
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
