apps/tinyauth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinyauth-ingress
  namespace: auth
  annotations:
    glance/icon: di:tinyauth
    glance/name: "TinyAuth"
    glance/url: "https://auth.realtong.cn"
    nginx.ingress.kubernetes.io/auth-signin-redirect-param: redirect_uri
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.realtong.cn
  rules:
    - host: auth.realtong.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tinyauth
                port:
                  number: 3000
